--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <version>0.911</version>
         </dependency>
 
+        <!-- Weka -->
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-stable</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
